--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -6,6 +6,7 @@ jobs:
     name: 'Wiz-cli IaC Scan'
     runs-on: ubuntu-latest
     env:
+      SCAN_PATH: "." # Set the relative path in the repo to scan
       POLICY: "iac-fail-low"
       WIZ_CLIENT_ID: ${{ secrets.WIZ_CLIENT_ID }}
       WIZ_CLIENT_SECRET: ${{ secrets.WIZ_CLIENT_SECRET }}
